--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,10 +30,13 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/22102025">22.10.2025</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/24092025">24.09.2025</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/27082025">27.08.2025</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/30072025">30.07.2025</a></p>
         <h3 class="jahr">2025</h3>
+        <p><span class="datum">30.07.2025:</span><br>Mit Jessica Simpson, Brendan James, Neal McCoy und Mireille Mathieu<br><a
+            href="https://helsinki.at/program/138224" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
+            href="https://cba.fro.at/725137" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
         <p><span class="datum">02.07.2025:</span><br>Wiederholung vom 06.07.2022: Mit Jennifer Lopez, DJ Lumix, Luke Hemmings
             und Carolin Niemczyk<br><a href="https://helsinki.at/program/138223" target="_blank">Programmhinweis auf der Radio
             Helsinki Homepage</a><br><a href="https://cba.fro.at/565617" target="_blank">Sendung zum Nachhören auf der
