--- a/22102025/index.html
+++ b/22102025/index.html
@@ -30,10 +30,13 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2>Sendung am 22.10.2025 um 18:00 Uhr</h2>
-    <p>Sie können diese Sendung am 22.10.2025 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
-      href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <div class="col-md-6">
+      <iframe src="https://cba.fro.at/740011/embed?&waveform=false" width="100%" height="99"
+        style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
+    </div>
     <p><a href="https://helsinki.at/program/138227" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
+    <p><a href="https://cba.fro.at/740011" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
     <p>Heute feiern wir mit Ivan Doroschuk von Men Without Hats, Sarah Engels, Lewis Capaldi und Gabriella Cilmi. Der
       Skirennläufer Manuel Feller hatte am 13. Oktober Geburtstag. Außerdem war vorgestern am 20. Oktober der
       Räum-Deinen-Desktop-Auf-Tag.</p>
