--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
       </div>
     </div>
 
+    <div class="announcement-1 alert alert-success">
+      <h2 class="announcement-font">Jubiläumsausgabe: 19.11.2025 18:00 Uhr</h2>
+    </div>
+
+    <h3 class="announcement-2 announcement-font">6 Jahre Happy Birthday Show</h3>
+    <p>Vor mittlerweile 6 Jahren ist die erste Happy Birthday Show auf Radio Helsinki auf Sendung gegangen. Wir feiern
+      das mit einer besonderen Jubiläumsausgabe am 19. November. Mehr Infos zur Jubiläumsausgabe finden Sie
+      <a href="https://happybirthdayshowhelsinki.github.io/19112025">hier</a>.</p>
+    <div class="announcement-torte-div"><img class="announcement-torte-img" src="favicon/android-chrome-192x192.png"
+      alt="Happy Birthday"></div>
+
     <h2 class="firstHeading">Was ist die Happy Birthday Show?</h2>
     <p>Die Happy Birthday Show ist eine Sendung auf Radio Helsinki in Graz, die jeden vierten Mittwoch von 18 bis 19 Uhr
       zu hören ist. In jeder Sendung werden MusikerInnen vorgestellt, die im jeweiligen Monat Geburtstag haben. Von
