--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
     </div>
 
     <h3 class="announcement-2 announcement-font">6 Jahre Happy Birthday Show</h3>
+    <iframe src="https://cba.fro.at/745464/embed?&waveform=false" width="100%" height="99"
+      style="border:none; width:100%; height:79px; margin-top: 10px; margin-bottom: 15px;"></iframe>
     <p>Vor mittlerweile 6 Jahren ist die erste Happy Birthday Show auf Radio Helsinki auf Sendung gegangen. Wir feiern
       das mit einer besonderen Jubiläumsausgabe am 19. November. Mehr Infos zur Jubiläumsausgabe finden Sie
       <a href="https://happybirthdayshowhelsinki.github.io/19112025">hier</a>.</p>
