--- a/19112025/index.html
+++ b/19112025/index.html
@@ -36,6 +36,8 @@
       <h2 class="announcement-font">Jubiläumsausgabe: 19.11.2025 18:00 Uhr</h2>
     </div>
     <h3 class="announcement-2 announcement-font">6 Jahre Happy Birthday Show</h3>
+    <iframe src="https://cba.fro.at/745464/embed?&waveform=false" width="100%" height="99"
+      style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
     <p>Vor mittlerweile 6 Jahren ist die erste Happy Birthday Show auf Radio Helsinki auf Sendung gegangen.
       Deshalb gibt es am 19. November eine besondere Jubiläumsausgabe.</p>
     <p>Wir feiern mit November-Geburtstagskindern<span style="background-color: #fff3cd; color: #856404;
@@ -45,8 +47,7 @@
       vom 1. Dezember 2019 und dem ersten Lied, das damals lief: Mat Kearney - Coming Home.</p>
     <p><a href="https://helsinki.at/program/138228" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Sie können die Jubiläumsausgabe am 19.11.2025 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
-      href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <p><a href="https://cba.fro.at/745464" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
