--- a/17122025/index.html
+++ b/17122025/index.html
@@ -34,7 +34,9 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/138229" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Charlie Puth, Grace Chetto von Clean Bandit, Zo&#235; Straub und John Rzeznik von den Goo
+      Goo Dolls. Der Astronom Johannes Kepler hat am 27. Dezember Geburtstag. Außerdem wurde am 27. Dezember in New York
+      die Radio City Music Hall eröffnet.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
