--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,10 +30,13 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/14012026">14.01.2026</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/17122025">17.12.2025</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/19112025">19.11.2025</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/22102025">22.10.2025</a></p>
         <h3 class="jahr">2025</h3>
+        <p><span class="datum">22.10.2025:</span><br>Mit Ivan Doroschuk, Sarah Engels, Lewis Capaldi und Gabriella Cilmi<br><a
+            href="https://helsinki.at/program/138227" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
+            href="https://cba.fro.at/740011" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
         <p><span class="datum">24.09.2025:</span><br>Mit Alex Warren, Esther Graf, James Bay und Tegan & Sara<br><a
             href="https://helsinki.at/program/138226" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
             href="https://cba.fro.at/734920" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
