--- a/03062026/index.html
+++ b/03062026/index.html
@@ -5,8 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-
   <link rel="apple-touch-icon" sizes="180x180"
     href="https://happybirthdayshowhelsinki.github.io/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32"
@@ -21,7 +19,7 @@
   <meta name="msapplication-config" content="https://happybirthdayshowhelsinki.github.io/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <title>Jubiläumsausgabe am 19.11.2025 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
+  <title>Sendung am 03.06.2026 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
   <link rel="stylesheet" href="/styles/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/stylesheet.css">
@@ -31,23 +29,12 @@
   <div class="content">
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
-
-    <div class="announcement-1 alert alert-success" style="margin-top: 0;">
-      <h2 class="announcement-font">Jubiläumsausgabe: 19.11.2025 18:00 Uhr</h2>
-    </div>
-    <h3 class="announcement-2 announcement-font">6 Jahre Happy Birthday Show</h3>
-    <iframe src="https://cba.fro.at/745464/embed?&waveform=false" width="100%" height="99"
-      style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
-    <p>Vor mittlerweile 6 Jahren ist die erste Happy Birthday Show auf Radio Helsinki auf Sendung gegangen.
-      Deshalb gibt es am 19. November eine besondere Jubiläumsausgabe.</p>
-    <p>Wir feiern mit November-Geburtstagskindern<span style="background-color: #fff3cd; color: #856404;
-      border-radius: 40px;"> Peter Brugger von Sportfreunde Stiller, Carly Rae Jepsen und Andreas Bourani. </span>
-      Außerdem hören wir uns die drei bekanntesten Songs aus dem letzten Happy Birthday Show-Jahr an.</p>
-    <p>Beginnen werden wir die Jubiläumsausgabe mit der ersten Moderation aus der allerersten Happy Birthday Show
-      vom 1. Dezember 2019 und dem ersten Lied, das damals lief: Mat Kearney - Coming Home.</p>
-    <p><a href="https://helsinki.at/program/138228" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
+    <h2>Sendung am 03.06.2026 um 18:00 Uhr</h2>
+    <p>Sie können diese Sendung am 03.06.2026 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
+      href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <p><a href="https://helsinki.at/program/146702" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p><a href="https://cba.fro.at/745464" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
+    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
